--- a/tunit/package.json
+++ b/tunit/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tunit",
   "version": "0.1.0-beta.0",
+  "homepage": "https://tunit-ai.github.io/Tunit-AI",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.5.1",
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
